# hackathon_code4change

./: .dockerignore  .gitattributes  .gitignore  COMPREHENSIVE_ANALYSIS.md  Court Scheduling System Implementation Plan.md  DEVELOPER_GUIDE.md  DEVELOPMENT.md  Dockerfile  HACKATHON_SUBMISSION.md  PIPELINE.md  PROJECT_STATUS.md  README.md  RL_EXPLORATION_PLAN.md  SUBMISSION_READINESS_AUDIT.md  SUBMISSION_SUMMARY.md  SYSTEM_WORKFLOW.md  TECHNICAL_IMPLEMENTATION.md  app.py  conftest.py  court_scheduler_rl.py  main.py  pyproject.toml  render.yaml  report.txt  run_comprehensive_sweep.ps1  test_enhancements.py  test_phase1.py  test_system.py  train_rl_agent.py
.github/workflows/: deploy_to_hf.yaml
Data/: court_data.duckdb
Data/quick_demo/: COMPARISON_REPORT.md  EXECUTIVE_SUMMARY.md  trained_rl_agent.pkl
Data/run_main_test/sim_output/: report.txt
Data/test_fixes/: report.txt
Data/test_refactor/: report.txt
cli/: __init__.py  config.py  main.py
configs/: generate.sample.toml  parameter_sweep.toml  simulate.sample.toml
court_scheduler/: __init__.py  cli.py  config_loader.py  config_models.py
docs/: CODEX_LOGICAL_REVIEW.md  CODEX_PR_ANALYSIS.md  CONFIGURATION.md  DASHBOARD.md  ENHANCEMENT_PLAN.md  HACKATHON_SUBMISSION.md  OUTPUT_REFACTORING.md  README.md  control.md  core.md  dashboard.md  data.md  metrics.md  monitoring.md  scheduler_flowchart.md  simulation.md  utils.md
eda/: config.py  exploration.py  load_clean.py  parameters.py
models/: intensive_trained_rl_agent.pkl  latest.pkl
pages/: 1_Data_And_Insights.py  2_Ripeness_Classifier.py  3_Simulation_Workflow.py  4_Cause_Lists_And_Overrides.py  5_Scheduled_Cases_Explorer.py  6_Analytics_And_Reports.py
reports/: codebase_analysis_2024-07-01.md
reports/figures/v0.4.0_20251130_161200/: 10_stage_transition_sankey.html  11_monthly_hearings.html  12b_court_day_load.html  15_bottleneck_impact.html  1_case_type_distribution.html  2_cases_filed_by_year.html  3_disposal_time_distribution.html  5_box_disposal_by_type.html  6_stage_frequency.html  9_gap_median_by_type.html
rl/: README.md  __init__.py  config.py  rewards.py  simple_agent.py  training.py
runs/baseline/: report.txt
runs/baseline_large_data/: report.txt
runs/rl_final_test/: report.txt
runs/rl_large_data/: report.txt
runs/rl_untrained/: report.txt
runs/rl_vs_baseline/: comparison_report.md
scheduler/control/: __init__.py  explainability.py  overrides.py
scheduler/core/: algorithm.py  case.py  courtroom.py  hearing.py  judge.py  policy.py  ripeness.py
scheduler/dashboard/: __init__.py  app.py
scheduler/dashboard/pages/: 1_Data_And_Insights.py  1_EDA_Analysis.py  2_Ripeness_Classifier.py  3_RL_Training.py  3_Simulation_Workflow.py  6_Analytics_And_Reports.py
scheduler/dashboard/utils/: __init__.py  data_loader.py  simulation_runner.py
scheduler/data/: case_generator.py  config.py  param_loader.py
scheduler/data/defaults/: adjournment_proxies.csv  case_type_summary.csv  court_capacity_global.json  stage_duration.csv  stage_transition_entropy.csv  stage_transition_probs.csv
scheduler/metrics/: basic.py
scheduler/monitoring/: __init__.py  ripeness_calibrator.py  ripeness_metrics.py
scheduler/output/: cause_list.py
scheduler/simulation/: allocator.py  engine.py  events.py  scheduler.py
scheduler/simulation/policies/: __init__.py  age.py  fifo.py  readiness.py  rl_policy.py
scheduler/utils/: calendar.py  output_manager.py
scripts/: analyze_disposal_purpose.py  analyze_historical.py  analyze_ripeness_patterns.py  check_disposal.py  check_new_params.py  compare_policies.py  demo_explainability_and_controls.py  generate_all_cause_lists.py  generate_cases.py  generate_comparison_plots.py  generate_sweep_plots.py  profile_simulation.py  reextract_params.py  simulate.py  suggest_schedule.py  validate_policy.py  verify_disposal_logic.py  verify_disposal_rates.py
src/: __init__.py  app.py  eda_config.py  eda_exploration.py  eda_load_clean.py  eda_parameters.py
src/config/: paths.py
src/control/: explainability.py  overrides.py
src/core/: algorithm.py  case.py  courtroom.py  hearing.py  judge.py  policy.py  ripeness.py
src/dashboard/pages/: 1_Data_And_Insights.py  2_Ripeness_Classifier.py  3_Simulation_Workflow.py  4_Cause_Lists_And_Overrides.py  5_Scheduled_Cases_Explorer.py  6_Analytics_And_Reports.py
src/dashboard/utils/: __init__.py  data_loader.py  simulation_runner.py  ticket_views.py  ui_input_parser.py
src/data/: case_generator.py  config.py  param_loader.py
src/monitoring/: __init__.py  ripeness_calibrator.py  ripeness_metrics.py
src/output/: __init__.py  cause_list.py
src/simulation/: allocator.py  engine.py  events.py
src/simulation/policies/: __init__.py  (+3 more)
src/utils/: calendar.py
tests/: conftest.py  test_enhancements.py  test_gap_fixes.py  test_invariants.py
tests/integration/: test_simulation.py
tests/unit/: test_algorithm.py  test_case.py  test_courtroom.py  test_ripeness.py
(+19 files in other folders)
