########################################
# CORE PROJECT METADATA
########################################
[project]
name = "code4change-analysis"
version = "0.1.0"
description = "Court scheduling simulation + analytics"
requires-python = ">=3.11"
authors = [{ name = "Aalekh Roy" }]

########################################
# PROJECT DEPENDENCIES
########################################
dependencies = [
    "pandas>=2.2",
    "polars>=1.30",
    "plotly>=6.0",
    "openpyxl>=3.1",
    "XlsxWriter>=3.2",
    "pyarrow>=17.0",
    "numpy>=2.0",
    "networkx>=3.0",
    "ortools>=9.8",
    "pydantic>=2.0",
    "typer>=0.12",
    "simpy>=4.1",
    "scipy>=1.14",
    "scikit-learn>=1.5",
    "streamlit>=1.28",
    "altair>=5.0",
    "duckdb>=1.4.2",
]

########################################
# DEV DEPENDENCIES
########################################
[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "black>=24.0",
    "mypy>=1.11",
    "hypothesis>=6.0",
    "pre-commit>=3.5",
]

########################################
# CLI SCRIPTS
########################################
[project.scripts]
court-scheduler = "cli.main:app"

########################################
# SETUPTOOLS PACKAGE DISCOVERY (FIX)
########################################
[tool.setuptools.packages.find]
include = [
    "cli",
    "eda",
    "scheduler",
]
exclude = [
    "Data",
    "configs",
    "outputs",
    "reports",
    "literature",
]

########################################
# BUILD SYSTEM
########################################
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
